--- a/pages/19886.html
+++ b/pages/19886.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -668,8 +668,8 @@ margin-left: 0em;
   
 </annotation></semantics></math></div>
 <p>Notice here that when <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi></mrow><annotation encoding="application/x-tex">Y</annotation></semantics></math> happens to have <a class="existingWikiWord" href="/nlab/show/empty+space">empty</a> <a class="existingWikiWord" href="/nlab/show/boundary">boundary</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∂</mo><mi>Y</mi><mo>=</mo><mi>∅</mi></mrow><annotation encoding="application/x-tex">\partial Y = \emptyset</annotation></semantics></math>, then the <a class="existingWikiWord" href="/nlab/show/pushout">pushout</a></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo stretchy="false">/</mo><mo>∂</mo><mi>Y</mi><mo>≔</mo><mi>Y</mi><munder><mo>⊔</mo><mrow><mo>∂</mo><mi>Y</mi></mrow></munder><mo>*</mo></mrow><annotation encoding="application/x-tex">
-  X / \partial Y \coloneqq Y \underset{\partial Y}{\sqcup} \ast
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo stretchy="false">/</mo><mo>∂</mo><mi>Y</mi><mo>≔</mo><mi>Y</mi><munder><mo>⊔</mo><mrow><mo>∂</mo><mi>Y</mi></mrow></munder><mo>*</mo></mrow><annotation encoding="application/x-tex">
+  Y / \partial Y \coloneqq Y \underset{\partial Y}{\sqcup} \ast
 
 </annotation></semantics></math></div>
 <p>is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi></mrow><annotation encoding="application/x-tex">Y</annotation></semantics></math> with a <a href="pointed+topological+space#ForgettingAndAdjoiningBasepoints">disjoint basepoint attached</a>. Notably for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>=</mo><mo>*</mo></mrow><annotation encoding="application/x-tex">Y =\ast</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/point+space">point space</a>, we have that</p>
@@ -850,14 +850,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 10:23:16.
+  Last revised on November  3, 2018 at 12:35:35.
   See the <a href="https://ncatlab.org/nlab/history/stable splitting of mapping spaces" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable splitting of mapping spaces/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
