--- a/pages/19904.html
+++ b/pages/19904.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      John David Stuart Jones in nLab
+      Pascal Lambrechts in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      John David Stuart Jones
+      Pascal Lambrechts
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9225/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,43 +309,25 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
 <body>
-<p><strong>John David Stuart Jones</strong> (J.D.S. Jones) is a mathematician at the University of Warwick.</p>
-
 <ul>
-<li><a href="http://www2.warwick.ac.uk/fac/sci/maths/people/staff/john_jones/">web</a></li>
-
-<li><a href="http://www.genealogy.math.ndsu.nodak.edu/id.php?id=24472">math genealogy</a></li>
-</ul>
-
-<h2 id="writings">Writings</h2>
-
-<ul>
-<li><em>Cyclic homology and equivariant homology</em>, Invent. Math. <strong>87</strong>, 403-423 (1987) (<a href="https://math.berkeley.edu/~nadler/jones.pdf">pdf</a>)</li>
+<li><a href="https://uclouvain.be/fr/repertoires/pascal.lambrechts">webpage</a></li>
 </ul>
 
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Jones%27+theorem">Jones' theorem</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Hochschild+homology">Hochschild homology</a>, <a class="existingWikiWord" href="/nlab/show/cyclic+homology">cyclic homology</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/free+loop+space">free loop space</a>, <a class="existingWikiWord" href="/nlab/show/cyclic+loop+space">cyclic loop space</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Sullivan+model+of+free+loop+space">Sullivan model of free loop space</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/configuration+space+of+points">configuration space of points</a></p>
 </li>
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a></p>
 </li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
@@ -354,22 +336,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 12:51:35.
-  See the <a href="https://ncatlab.org/nlab/history/John David Stuart Jones" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on November  3, 2018 at 12:38:52.
+  See the <a href="https://ncatlab.org/nlab/history/Pascal Lambrechts" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/John+David+Stuart+Jones" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/John+David+Stuart+Jones/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/John+David+Stuart+Jones" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/John+David+Stuart+Jones" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/John David Stuart Jones/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Pascal+Lambrechts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Pascal Lambrechts/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/John+David+Stuart+Jones" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Pascal+Lambrechts" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/John+David+Stuart+Jones" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Pascal+Lambrechts" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/John+David+Stuart+Jones" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Pascal+Lambrechts" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
