--- a/pages/322.html
+++ b/pages/322.html
@@ -856,6 +856,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/framed+little+n-disk+operad">framed little n-disk operad</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a></p>
+</li>
 </ul>
 </li>
 </ul>
@@ -1055,14 +1059,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 13:37:39.
+  Last revised on November  3, 2018 at 12:49:53.
   See the <a href="https://ncatlab.org/nlab/history/operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/operad/75" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(75 revisions)</span> | <a href="/nlab/show/diff/operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/operad/76" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(76 revisions)</span> | <a href="/nlab/show/diff/operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
