--- a/pages/18070.html
+++ b/pages/18070.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_37" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_38" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -762,6 +762,7 @@ margin-left: 0em;
 <li><a href='#scanning_map_and_cohomotopy'>Scanning map and cohomotopy</a></li>
 <li><a href='#stable_splitting_of_mapping_spaces'>Stable splitting of mapping spaces</a></li>
 <li><a href='#ReferencesInGoodwillieCalculus'>In Goodwillie-calculus</a></li>
+<li><a href='#ReferencesCompactification'>Compactification</a></li>
 <li><a href='#relation_to_graph_complexes'>Relation to graph complexes</a></li>
 </ul>
 </ul>
@@ -1182,7 +1183,7 @@ margin-left: 0em;
 
 <h3 id="stable_splitting_of_mapping_spaces">Stable splitting of mapping spaces</h3>
 
-<p>The appearance of configuration spaces as summands in <span class="newWikiWord">stable splittings of mapping spaces<a href="/nlab/new/stable+splittings+of+mapping+spaces">?</a></span> is originally due to</p>
+<p>The appearance of configuration spaces as summands in <a class="existingWikiWord" href="/nlab/show/stable+splittings+of+mapping+spaces">stable splittings of mapping spaces</a> is originally due to</p>
 
 <ul>
 <li id="Snaith74"><a class="existingWikiWord" href="/nlab/show/Victor+Snaith">Victor Snaith</a>, <em>A stable decomposition of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup><mi>X</mi></mrow><annotation encoding="application/x-tex">\Omega^n S^n X</annotation></semantics></math></em>, Journal of the London Mathematical Society 7 (1974), 577 - 583 (<a href="https://www.maths.ed.ac.uk/~v1ranick/papers/snaiths.pdf">pdf</a>)</li>
@@ -1220,6 +1221,28 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h3 id="ReferencesCompactification">Compactification</h3>
+
+<p>A <a class="existingWikiWord" href="/nlab/show/compactification">compactification</a> of configuration spaces of points was introduced in</p>
+
+<ul>
+<li>William Fulton, Robert MacPherson, <em>A compactification of configuration spaces</em>, Ann. of Math. (2), 139(1):183–225, 1994.</li>
+</ul>
+
+<p>and an <a class="existingWikiWord" href="/nlab/show/operad">operad</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> defined on it (<a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a>) in</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Ezra+Getzler">Ezra Getzler</a>, <a class="existingWikiWord" href="/nlab/show/John+Jones">John Jones</a>, <em>Operads, homotopy algebra and iterated integrals for double loop spaces</em>.</li>
+</ul>
+
+<p>Review includes</p>
+
+<ul>
+<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, Ismar Volic, section 5 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
+</ul>
+
+<p>This underlies the models of configuration spaces by <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a>, see there for more.</p>
+
 <h3 id="relation_to_graph_complexes">Relation to graph complexes</h3>
 
 <p>Models for the <a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a> of configuration in terms of <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a> are discussed in</p>
@@ -1233,14 +1256,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 09:50:59.
+  Last revised on November  3, 2018 at 12:43:24.
   See the <a href="https://ncatlab.org/nlab/history/configuration space of points" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space of points/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
