--- a/pages/19905.html
+++ b/pages/19905.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9226/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9226/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -490,17 +490,43 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
-<p>The original articles are</p>
+<p>The Fulton-MacPherson <a class="existingWikiWord" href="/nlab/show/compactification">compactification</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> was first considered in</p>
 
 <ul>
-<li id="FultonMacPherson94">
-<p>William Fulton, Robert MacPherson, <em>A compactification of configuration spaces</em>, Ann. of Math. (2), 139(1):183–225, 1994.</p>
+<li id="FultonMacPherson94">William Fulton, Robert MacPherson, <em>A compactification of configuration spaces</em>, Ann. of Math. (2), 139(1):183–225, 1994.</li>
+</ul>
+
+<p>and the <a class="existingWikiWord" href="/nlab/show/operad">operad</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> on these compactified spaces was considered in</p>
+
+<ul>
+<li id="GetzlerJones94"><a class="existingWikiWord" href="/nlab/show/Ezra+Getzler">Ezra Getzler</a>, <a class="existingWikiWord" href="/nlab/show/John+Jones">John Jones</a>, <em>Operads, homotopy algebra and iterated integrals for double loop spaces</em> (<a href="https://arxiv.org/abs/hep-th/9403055">arXiv:hep-th/9403055</a>)</li>
+</ul>
+
+<p>and alternatively in</p>
+
+<ul>
+<li id="Kontsevich99b">
+<p><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, around Def. 12 of <em>Operads and Motives in Deformation Quantization</em>, Lett.Math.Phys.48:35-72,1999 (<a href="https://arxiv.org/abs/math/9904055">arXiv:math/9904055</a>)</p>
 </li>
 
-<li id="GetzlerJones94">
-<p><a class="existingWikiWord" href="/nlab/show/Ezra+Getzler">Ezra Getzler</a>, <a class="existingWikiWord" href="/nlab/show/John+Jones">John Jones</a>, <em>Operads, homotopy algebra and iterated integrals for double loop spaces</em> (<a href="https://arxiv.org/abs/hep-th/9403055">arXiv:hep-th/9403055</a>)</p>
+<li id="Kontsevich97">
+<p><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, section 5.1 of <em>Deformation quantization of Poisson manifolds, I</em>, Lett.Math.Phys.66:157-216,2003 (<a href="https://arxiv.org/abs/q-alg/9709040">arXiv:q-alg/9709040</a>)</p>
 </li>
 </ul>
+
+<p>which was corrected in</p>
+
+<ul>
+<li>Giovanni Gaiffi, <em>Models for real subspace arrangements and stratified manifolds</em>, Int. Math. Res. Not. 12:627-656, 2003 (<a href="http://www.dm.unipi.it/~gaiffi/papers/models.pdf">pdf</a>)</li>
+</ul>
+
+<p>and developed in detail in</p>
+
+<ul>
+<li id="Sinha03">Dev Sinha, <em>Manifold theoretic compactifications of configuration spaces</em>, Selecta Math. (N.S.) 10(3):391-428, 2004 (<a href="https://arxiv.org/abs/math/0306385">arXiv:math/0306385</a>)</li>
+</ul>
+
+<p>which also shows the equivalence to <a href="#FultonMacPherson94">Fulton-MacPherson 94</a>.</p>
 
 <p>Review includes</p>
 
@@ -513,14 +539,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November  3, 2018 at 12:47:39.
+  Last revised on November  3, 2018 at 13:59:52.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Fulton-MacPherson operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
