--- a/pages/19907.html
+++ b/pages/19907.html
@@ -1277,9 +1277,9 @@ margin-left: 0em;
 
 <h2 id="statement">Statement</h2>
 
-<p>The <a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a> is <a class="existingWikiWord" href="/nlab/show/formal+smooth+manifold">formal</a> in the sense that for each of its component <a class="existingWikiWord" href="/nlab/show/topological+spaces">topological spaces</a> there is a <a class="existingWikiWord" href="/nlab/show/zig-zag">zig-zag</a> of <a class="existingWikiWord" href="/nlab/show/quasi-isomorphisms">quasi-isomorphisms</a> between their <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> and their <a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a>, and such that these morphisms are compatible with the induced <a class="existingWikiWord" href="/nlab/show/cooperad">cooperad</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> on both sides.</p>
+<p>The <a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a> is <a class="existingWikiWord" href="/nlab/show/formal+dg-algebra">formal</a> in the sense that for each of its component <a class="existingWikiWord" href="/nlab/show/topological+spaces">topological spaces</a> there is a <a class="existingWikiWord" href="/nlab/show/zig-zag">zig-zag</a> of <a class="existingWikiWord" href="/nlab/show/quasi-isomorphisms">quasi-isomorphisms</a> between their <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> and their <a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a>, and such that these morphisms are compatible with the induced <a class="existingWikiWord" href="/nlab/show/cooperad">cooperad</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> on both sides.</p>
 
-<p>Concretely, the <a class="existingWikiWord" href="/nlab/show/zig-zags">zig-zags</a> may be taken to consist of one <a class="existingWikiWord" href="/nlab/show/span">span</a> of <a class="existingWikiWord" href="/nlab/show/quasi-isomorphisms">quasi-isomorphisms</a> out of a suitable <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> to the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a>/<a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a> of the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a>, which in turn is <a class="existingWikiWord" href="/nlab/show/weak+equivalence">weakly equivalent</a> to the <a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a>.</p>
+<p>Concretely, the <a class="existingWikiWord" href="/nlab/show/zig-zags">zig-zags</a> may be taken to consist of one <a class="existingWikiWord" href="/nlab/show/span">span</a> of <a class="existingWikiWord" href="/nlab/show/quasi-isomorphisms">quasi-isomorphisms</a> out of a suitable <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> to the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a>/<a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a> of the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a>, which in turn is <a class="existingWikiWord" href="/nlab/show/weak+equivalence">weakly equivalent</a> to the <a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a> (<a href="Fulton-MacPherson+operad#WeakEquivalenceToLittleNDiskOperad">this Prop.</a>).</p>
 
 <p>Here the morphism from the <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a> to the <a class="existingWikiWord" href="/nlab/show/de+Rham+complex">de Rham complex</a> of the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a> regards the latter as the <a class="existingWikiWord" href="/nlab/show/compactification">compactification</a> of a <a class="existingWikiWord" href="/nlab/show/configuration+space+of+points">configuration space of points</a>, regards <a class="existingWikiWord" href="/nlab/show/functions">functions</a>/<a class="existingWikiWord" href="/nlab/show/differential+forms">differential forms</a> on <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> as <a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> of a <a class="existingWikiWord" href="/nlab/show/topological+quantum+field+theory">topological</a> <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a>, regards suitable <a class="existingWikiWord" href="/nlab/show/graphs">graphs</a> as <a class="existingWikiWord" href="/nlab/show/Feynman+diagrams">Feynman diagrams</a> and proceeds by sending each such graph/Feynman diagram to a corresponding <a class="existingWikiWord" href="/nlab/show/Feynman+amplitude">Feynman amplitude</a>.</p>
 
@@ -1296,7 +1296,7 @@ margin-left: 0em;
 <p>A full proof is spelled out in</p>
 
 <ul>
-<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, Ismar Volic, sections 6 and 7 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
+<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, Ismar Volic, sections 6 and 7 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="https://arxiv.org/abs/0808.0457">arXiv:0808.0457</a>, <a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
 </ul>
 
 <p>Further discussion of the graph complex as a model for the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> is in</p>
@@ -1320,14 +1320,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November  4, 2018 at 01:53:20.
+  Last revised on November  4, 2018 at 02:53:34.
   See the <a href="https://ncatlab.org/nlab/history/the little n-disk operad is formal" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/the+little+n-disk+operad+is+formal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/the+little+n-disk+operad+is+formal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/the+little+n-disk+operad+is+formal/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/the+little+n-disk+operad+is+formal" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/the+little+n-disk+operad+is+formal" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/the little n-disk operad is formal/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
