--- a/pages/2810.html
+++ b/pages/2810.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9230/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -484,6 +484,7 @@ margin-left: 0em;
 <li><a href='#MainResult'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>-fold delooping, monoidalness and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔼</mi><mo stretchy="false">[</mo><mi>k</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">\mathbb{E}[k]</annotation></semantics></math>-action</a></li>
 <li><a href='#StabilizationHypothesis'>Stabilization hypothesis</a></li>
 <li><a href='#AdditivityTheorem'>Additivity theorem</a></li>
+<li><a href='#RelationToFultonMacPhersonOperad'>Relation to Fulton-MacPherson operad</a></li>
 <li><a href='#cohomology_formality'>Cohomology: Formality</a></li>
 <li><a href='#homology_poisson_operads'>Homology: Poisson operads</a></li>
 </ul>
@@ -655,6 +656,16 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>This is discussed and realized in section 1.2. of (<a href="#Lurie">Lurie</a>). The tensor product is defined in appendix B.7.</p>
 
+<h3 id="RelationToFultonMacPhersonOperad">Relation to Fulton-MacPherson operad</h3>
+
+<div class="num_prop">
+<h6 id="proposition">Proposition</h6>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a> is <a class="existingWikiWord" href="/nlab/show/weak+equivalence">weakly equivalent</a> in the <a class="existingWikiWord" href="/nlab/show/model+structure+on+operads">model structure on operads</a> with respect to the <a class="existingWikiWord" href="/nlab/show/classical+model+structure+on+topological+spaces">classical model structure on topological spaces</a>, to the <a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a></p>
+</div>
+
+<p>(<a href="#Salvatore01">Salvatore 01, Prop. 4.9</a>, summarized as <a href="#LambrechtsVolic14">Lambrechts-Volic 14, Prop. 5.6</a>)</p>
+
 <h3 id="cohomology_formality">Cohomology: Formality</h3>
 
 <p><a class="existingWikiWord" href="/nlab/show/the+little+n-disk+operad+is+formal">the little n-disk operad is formal</a></p>
@@ -679,7 +690,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><span class="newWikiWord">configiration space of points<a href="/nlab/new/configiration+space+of+points">?</a></span>, <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/configuration+space+of+points">configuration space of points</a>, <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a></p>
 </li>
 
 <li>
@@ -707,7 +718,13 @@ margin-left: 0em;
 <li id="May"><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>The geometry of iterated loop spaces</em> (<a href="http://www.math.uchicago.edu/~may/BOOKS/geom_iter.pdf">pdf</a>)</li>
 </ul>
 
-<p>Discussion of <a class="existingWikiWord" href="/nlab/show/formal+smooth+manifold">formality</a>:</p>
+<p>The equivalence to the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a> is due to</p>
+
+<ul>
+<li id="Salvatore01">Paolo Salvatore, <em>Configuration spaces with summable labels</em>, Cohomological methods in homotopy theory. Birkhäuser, Basel, 2001. 375-395.</li>
+</ul>
+
+<p>Proof that <a class="existingWikiWord" href="/nlab/show/the+little+n-disk+operad+is+formal">the little n-disk operad is formal</a> was sketched by <a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a> and spelled out in</p>
 
 <ul>
 <li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, Ismar Volic, section 5 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
@@ -758,7 +775,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 01:35:45.
+  Last revised on November  4, 2018 at 02:08:55.
   See the <a href="https://ncatlab.org/nlab/history/little cubes operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
