--- a/pages/18070.html
+++ b/pages/18070.html
@@ -1002,7 +1002,7 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p>In particular when <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>=</mo><msup><mi>𝔻</mi> <mi>k</mi></msup></mrow><annotation encoding="application/x-tex">Y = \mathbb{D}^k</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/closed+ball">closed ball</a> of <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> this gives a <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a></p>
+<p>In particular when <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>=</mo><msup><mi>𝔻</mi> <mi>k</mi></msup></mrow><annotation encoding="application/x-tex">Y = \mathbb{D}^k</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/closed+ball">closed ball</a> of <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">k \geq 1</annotation></semantics></math> this gives a <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>𝔻</mi> <mi>k</mi></msup><mo>)</mo></mrow><mover><mo>⟶</mo><mi>scan</mi></mover><msup><mi>Ω</mi> <mi>d</mi></msup><msup><mi>S</mi> <mrow><mi>d</mi><mo>+</mo><mi>k</mi></mrow></msup></mrow><annotation encoding="application/x-tex">
   Conf\left( 
     \mathbb{R}^d, \mathbb{D}^k
@@ -1278,14 +1278,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 02:53:01.
+  Last revised on November  4, 2018 at 04:00:31.
   See the <a href="https://ncatlab.org/nlab/history/configuration space of points" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space of points/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
