--- a/pages/19886.html
+++ b/pages/19886.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9202/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9202/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -722,7 +722,7 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p>In particular when <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>=</mo><msup><mi>𝔻</mi> <mi>k</mi></msup></mrow><annotation encoding="application/x-tex">Y = \mathbb{D}^k</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/closed+ball">closed ball</a> of <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> this gives a <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a></p>
+<p>In particular when <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>=</mo><msup><mi>𝔻</mi> <mi>k</mi></msup></mrow><annotation encoding="application/x-tex">Y = \mathbb{D}^k</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/closed+ball">closed ball</a> of <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">k \geq 1</annotation></semantics></math> this gives a <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>𝔻</mi> <mi>k</mi></msup><mo>)</mo></mrow><mover><mo>⟶</mo><mi>scan</mi></mover><msup><mi>Ω</mi> <mi>d</mi></msup><msup><mi>S</mi> <mrow><mi>d</mi><mo>+</mo><mi>k</mi></mrow></msup></mrow><annotation encoding="application/x-tex">
   Conf\left( 
     \mathbb{R}^d, \mathbb{D}^k
@@ -850,14 +850,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 12:35:35.
+  Last revised on November  4, 2018 at 04:00:54.
   See the <a href="https://ncatlab.org/nlab/history/stable splitting of mapping spaces" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable splitting of mapping spaces/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
