--- a/pages/4231.html
+++ b/pages/4231.html
@@ -1897,9 +1897,21 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>One finds then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi><mo>∘</mo><mi>s</mi><mo>=</mo><msub><mi>id</mi> <mi>Y</mi></msub></mrow><annotation encoding="application/x-tex">p \circ s = id_Y</annotation></semantics></math>.</p>
+<p>One finds then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi><mo>∘</mo><mi>s</mi><mo>=</mo><msub><mi>id</mi> <mi>Y</mi></msub></mrow><annotation encoding="application/x-tex">p \circ s = id_Y</annotation></semantics></math>. As <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>J</mi></mrow><annotation encoding="application/x-tex">J</annotation></semantics></math>-homotopy equivalence, it follows that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>s</mi></mrow><annotation encoding="application/x-tex">s</annotation></semantics></math> is its homotopic inverse, in particular, there is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>J</mi></mrow><annotation encoding="application/x-tex">J</annotation></semantics></math>-homotopy <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi><mo>:</mo><msub><mi>id</mi> <mi>X</mi></msub><mo>⇒</mo><mi>s</mi><mo>∘</mo><mi>p</mi></mrow><annotation encoding="application/x-tex">h : id_X \Rightarrow s \circ p</annotation></semantics></math>.</p>
 
-<p>Next …</p>
+<p>Next we lift the trivial homotopy</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mo>∂</mo><mi>I</mi><mo>⊗</mo><mi>I</mi><mo>⊗</mo><mi>X</mi><mo>∪</mo><mi>I</mi><mo>⊗</mo><mo stretchy="false">{</mo><mn>0</mn><mo stretchy="false">}</mo><mo>⊗</mo><mi>X</mi></mtd> <mtd><mover><mo>→</mo><mrow><mo stretchy="false">(</mo><mo stretchy="false">[</mo><mi>h</mi><mo>,</mo><mi>s</mi><mo>∘</mo><mi>p</mi><mo>∘</mo><msub><mi>σ</mi> <mi>X</mi></msub><mo stretchy="false">]</mo><mo>,</mo><mi>h</mi><mo stretchy="false">)</mo></mrow></mover></mtd> <mtd><mi>X</mi></mtd></mtr> <mtr><mtd><mo stretchy="false">↓</mo></mtd> <mtd><mi>H</mi><mo>↗</mo></mtd> <mtd><msup><mo stretchy="false">↓</mo> <mpadded width="0"><mi>p</mi></mpadded></msup></mtd></mtr> <mtr><mtd><mi>I</mi><mo>⊗</mo><mi>I</mi><mo>⊗</mo><mi>X</mi></mtd> <mtd><mover><mo>→</mo><mrow><mi>p</mi><mo>∘</mo><mi>H</mi><mo>∘</mo><mo stretchy="false">(</mo><mi>I</mi><mo>⊗</mo><msub><mi>σ</mi> <mi>X</mi></msub><mo stretchy="false">)</mo></mrow></mover></mtd> <mtd><mi>Y</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+\array{
+  \partial I \otimes I \otimes X \cup I \otimes \{0\} \otimes X &amp;
+  \stackrel{([h, s \circ p \circ \sigma_X], h)}{\to} &amp; X \\
+  \downarrow &amp; H \nearrow &amp; \downarrow^{\mathrlap{p}} \\
+  I \otimes I \otimes X &amp;
+  \stackrel{p \circ H \circ (I \otimes \sigma_{X})}{\to} &amp;
+  Y
+}
+
+</annotation></semantics></math></div>
+<p>Now <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>∘</mo><msubsup><mo>∂</mo> <mrow><mi>I</mi><mo>⊗</mo><mi>X</mi></mrow> <mn>0</mn></msubsup></mrow><annotation encoding="application/x-tex">H \circ \partial^0_{I \otimes X}</annotation></semantics></math> is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>J</mi></mrow><annotation encoding="application/x-tex">J</annotation></semantics></math>-homotopy showing that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> is a dual strong deformation retract.</p>
 </div>
 
 <div class="num_cor">
@@ -2189,14 +2201,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 21:13:04.
+  Last revised on November  5, 2018 at 12:58:11.
   See the <a href="https://ncatlab.org/nlab/history/Cisinski model structure" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Cisinski+model+structure" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cisinski+model+structure/42" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(42 revisions)</span> | <a href="/nlab/show/diff/Cisinski+model+structure" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cisinski+model+structure" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Cisinski+model+structure" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cisinski+model+structure/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/Cisinski+model+structure" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cisinski+model+structure" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Cisinski model structure/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
