--- a/pages/1861.html
+++ b/pages/1861.html
@@ -1096,7 +1096,7 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>from the cohomotopy sets of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> to the <a class="existingWikiWord" href="/nlab/show/cobordism+group">cobordism group</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>n</mi><mo>−</mo><mi>k</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(n-k)</annotation></semantics></math>-dimensional <a class="existingWikiWord" href="/nlab/show/submanifolds">submanifolds</a> with <a class="existingWikiWord" href="/nlab/show/normal+bundle">normal</a> <a class="existingWikiWord" href="/nlab/show/framed+manifold">framing</a> up to normally framed <a class="existingWikiWord" href="/nlab/show/cobordism">cobordism</a>.</p>
 
-<p>In particular, the natural group structure on <a class="existingWikiWord" href="/nlab/show/cobordism+group">cobordism group</a> (essentially given by <a class="existingWikiWord" href="/nlab/show/disjoint+union">disjoint union</a> of submanifolds) this way induces a group structure on the cohomotopy sets.</p>
+<p>In particular, the canonical <a class="existingWikiWord" href="/nlab/show/group">group</a> <a class="existingWikiWord" href="/nlab/show/structure">structure</a> on <a class="existingWikiWord" href="/nlab/show/cobordism+groups">cobordism groups</a> (essentially given by <a class="existingWikiWord" href="/nlab/show/disjoint+union">disjoint union</a> of <a class="existingWikiWord" href="/nlab/show/submanifolds">submanifolds</a>) this way induces a group structure on the cohomotopy sets.</p>
 
 <p>This is made explicit for instance in <a href="#Kosinski93">Kosinski 93, chapter IX</a>.</p>
 
@@ -1241,14 +1241,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 13:33:16.
+  Last revised on November  5, 2018 at 14:57:04.
   See the <a href="https://ncatlab.org/nlab/history/cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cohomotopy/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cohomotopy/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
