--- a/pages/3522.html
+++ b/pages/3522.html
@@ -670,6 +670,7 @@ margin-left: 0em;
 <li><a href='#examples'>Examples</a></li>
 <ul>
 <li><a href='#goodwillie_derivatives_of_the_identity_functor'>Goodwillie derivatives of the identity functor</a></li>
+<li><a href='#goodwillie_derivatives_of_mapping_spaces'>Goodwillie derivatives of mapping spaces</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
@@ -928,6 +929,10 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 
 <p>See at <em><a class="existingWikiWord" href="/nlab/show/Goodwillie+derivatives+of+the+identity+functor">Goodwillie derivatives of the identity functor</a></em></p>
 
+<h3 id="goodwillie_derivatives_of_mapping_spaces">Goodwillie derivatives of mapping spaces</h3>
+
+<p>See at <em><a class="existingWikiWord" href="/nlab/show/stable+splitting+of+mapping+spaces">stable splitting of mapping spaces</a></em>.</p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -1101,7 +1106,7 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 
 <div class="revisedby">
   <p>
-  Last revised on November  6, 2018 at 06:46:20.
+  Last revised on November  6, 2018 at 07:10:52.
   See the <a href="https://ncatlab.org/nlab/history/Goodwillie calculus" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
